Adicionado ORM, DOCKER, e terminando autenticação
